enlarge memory size
svn path=/trunk/mcs/; revision=92596